# mammos-units

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING-MaMMoS.md  READMDE.md  README.md  devloper-documentation.md  pyproject.toml
.binder/: environment.yml
.github/workflows/: check-changelog.yml  latest-tag.yml  publish.yml  test.yml  testing.yml
binder/: environment.yml
changes/: 32.misc.md  66.changed.md  README.md
dev/: astropy.ipynb  pint.ipynb  unyt.ipynb
docs/: example.ipynb
examples/: example.ipynb  index.rst  quickstart.ipynb
src/mammos_units/: __init__.py
tests/: nbval_sanitize.cfg  test_units.py
