[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mammos-units"
version = "0.2.4.dev0"
description = "Magnetic units package built on top of Astropy units"
authors = [
    { name = "Sam Holt", email = "samjrholt@gmail.com" },
    { name = "Hans Fangohr", email = "hans.fangohr@mpsd.mpg.de"},
    {name = "Swapneel Amit Pathak", email = "swapneel-amit.pathak@mpsd.mpg.de"},
    {name = "Martin Lang", email = "martin.lang@mpsd.mpg.de"},
]
license = "MIT"
license-files = ["LICENSE"]

requires-python = ">=3.11"
dependencies = [
    "astropy>=7.0.0",
]

[project.urls]
Homepage = "https://mammos-project.github.io"
Documentation = "https://mammos-project.github.io/mammos"
Repository = "https://github.com/MaMMoS-project/mammos-units"
Issues = "https://github.com/MaMMoS-project/mammos-units/issues"
Changelog = "https://mammos-project.github.io/mammos/changelog"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
mammos-units = { path = ".", editable = true }

[tool.pixi.tasks]
example = "jupyter-lab docs/example.ipynb"
test = "pytest -v --nbval --doctest-modules"

[tool.pixi.dependencies]
python = ">=3.11"
pytest = "*"
jupyter = "*"
nbval = "*"

[tool.ruff.lint.per-file-ignores]
"src/mammos_units/__init__.py" = ["F403", "F405"]