[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mammos-units"
version = "0.2.4.dev0"
description = "Magnetic units package built on top of Astropy units"
authors = [
    { name = "Sam Holt", email = "samjrholt@gmail.com" },
    { name = "Hans Fangohr", email = "hans.fangohr@mpsd.mpg.de"},
    {name = "Swapneel Amit Pathak", email = "swapneel-amit.pathak@mpsd.mpg.de"},
    {name = "Martin Lang", email = "martin.lang@mpsd.mpg.de"},
]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3 :: Only",
  'Topic :: Scientific/Engineering :: Physics',
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.0.0",
]

[project.urls]
Homepage = "https://mammos-project.github.io"
Documentation = "https://mammos-project.github.io/mammos"
Repository = "https://github.com/MaMMoS-project/mammos-units"
Issues = "https://github.com/MaMMoS-project/mammos-units/issues"
Changelog = "https://mammos-project.github.io/mammos/changelog"

[tool.ruff]
target-version = "py311"
exclude = [
  "dev",
]
[tool.ruff.lint]
select = [
  "B",   # flake8-bugbear
  # "D",   # pydocstyle
  "E",   # pycodestyle
  "F",   # Pyflakes
  "I",   # isort
  "SIM", # flake8-simplify
  "UP",  # pyupgrade
]
#ignore = [
#  # conflict with other rules
#  "D203", # one-blank-line-before-class (conflicts with D204)
#  # conflict with formatter
#  "D206", # indent-with-spaces
#  "D212", # multi-line-summary-first-line (conflicts with D213)
#  "D300", # triple-single-quotes
#  "E111", # indentation-with-invalid-multiple
#  "E114", # indentation-with-invalid-multiple-comment
#  "E117", # over-indented
#]
isort.known-local-folder = [ "src/mammos_units" ]
pydocstyle.convention = "pep257"
[tool.ruff.lint.per-file-ignores]
"src/mammos_units/__init__.py" = ["F403", "F405"]  # * import of astropy.units
"*.ipynb" = [
  "B018", # "Found useless expression. Either assign it to a variable or remove it."; false positives when using implicit __repr__ in the notebook
]

[tool.pixi.workspace]
channels = [ "conda-forge" ]
platforms = [ "osx-arm64", "linux-64", "osx-64", "win-64" ]

# Due to the inability to resolve conda and PyPI dependencies together
# we install as much as possible from PyPI
[tool.pixi.dependencies]
python = "==3.11"
# esys-escript = ">=5.10,6"

[tool.pixi.pypi-dependencies]
mammos-units = { path = ".", editable = true }
jupyterlab = ">3"
pre-commit = "*"
pytest = "*"
nbval = "*"
ipython = "*"
hatch = "*"

[tool.pixi.tasks]
examples = "jupyter-lab examples"
test-unittest = "pytest -v tests"
test-docstrings = "pytest -v --doctest-modules src/mammos_units"
test-notebooks = "pytest -v --nbval-lax examples"
test-all = { depends-on = ["test-unittest", "test-docstrings", "test-notebooks"] }
style = "pre-commit run --all-files"